--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "apollo-server-express": "^3.12.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "helmet": "^6.1.5",
+    "mysql2": "^3.2.1",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sequelize": "^6.31.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
